--- a/vrhome/static/sass/modules/_navbar.scss
+++ b/vrhome/static/sass/modules/_navbar.scss
@@ -86,5 +86,6 @@
 @media (max-width: 768px){
 	.navbar-brand.visible-xs {
 	    display: block !important;
+	    padding-top: 0;
 	}
 }
